--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~38.0.8",
     "expo-screen-orientation": "~1.1.1",
     "expo-status-bar": "^1.0.2",
+    "npm": "^6.14.7",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
@@ -22,8 +24,10 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.5.0",
+    "react-navigation-header-buttons": "^5.0.0",
     "react-navigation-stack": "^2.8.2",
-    "react-navigation-tabs": "^2.9.0"
+    "react-navigation-tabs": "^2.9.0",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
